src/scss/components/_post.scss
.post {
    &__body {
        --flow-space: #{get-size(800)};

        > p:first-of-type:not(.post-note) {
            @include apply-utility('font', 'heading');
            font-size: get-size(600);
            font-weight: 600;
		}

		[data-user-color-scheme='dark'] & {
			> p:first-of-type:not(.post-note) {
				font-weight: 500;
			}

			p,
			li {
				font-weight: 600;
			}
		}

        /**
        * Generic HTML styles
        */
        h2 + *,
        h3 + * {
            --flow-space: #{get-size(500)};
        }

        h2,
        h3 {
            @include apply-utility('leading', 'tight');
            position: relative;
        }

        a:not([class]) {
            @include apply-utility('leading', 'tight');
            text-decoration-thickness: 2px;
            transition: color .35s ease;
        }

        code,
        .bg-dark > code {
            background-color: var(--color-intro-bg);
			border: 1px dashed var(--color-link-text);
			border-radius: 3px;
            color: var(--color-text);
            font-weight: 600;
            padding: .2rem .5rem;
            white-space: pre;
        }

        pre > code {
            border: 0;
            margin-right: 0;
        }

        blockquote {
            background-color: var(--color-light);
            border: 1px dashed #ccc;
			border-left: .4rem solid var(--color-theme-primary);
			color: var(--color-dark);
            margin-left: 0;
            padding-left: get-size(500);
            font-size: get-size(600);
            font-weight: 600;
            width: 100%;

            p {
                opacity: .85;
                padding: get-size(500) 0;
            }
        }

        ol,
        ul {
            margin-left: get-size(800);

            ::marker {
                color: var(--color-theme-primary);
                font-size: get-size(300);
            }
        }

        li + li {
            margin-top: get-size(300);
        }

        figure,
        figure + *,
        pre > code,
        .video-player,
        .video-player + * {
            --flow-space: #{get-size('max')};
        }

        figure,
        .video-player {
            width: 100vw;
            max-width: map-get($metrics, 'wrap-max-width');
            margin-left: 50%; /*changing this value to 47% removes the horizontal scrollbar once the viewport is < 930px */
            transform: translateX(
                -50%
            ); /* changing this value to 49% allows for the suggestion above to also eliminate the horizontal scroll. */
            position: relative;
        }

        figure img
        .video-player {
            box-shadow: 3px 3px 0 rgba(0, 0, 0, .1);
        }

        figure img {
            position: relative;
            z-index: 1;
        }

        figcaption {
            font-size: 0.8em;
            font-style: italic;
            max-width: map-get($metrics, 'wrap-inner-max-width');
            margin: 0.5rem auto 0 auto;
            padding: 0 get-size(500);
        }

        pre[class*='language'] {
            background-color: var(--color-dark-alt);
            box-shadow: 3px 3px 0 rgba(0, 0, 0, .1);
            width: 100vw;
            margin-left: 50%; /*changing this value to 47% removes the horizontal scrollbar once the viewport is < 930px */
            transform: translateX(
                -50%
            ); /* changing this value to 49% allows for the suggestion above to also eliminate the horizontal scroll. */
            position: relative;
        }

        pre > code {
            display: block;
            font-size: get-size(500);
            font-weight: 400;
            margin: 0 auto;
            max-width: map-get($metrics, 'wrap-max-width');
            padding: get-size(700);

            ::selection {
                background-color: var(--color-light);
                color: var(--color-dark-alt);
            }
        }

        p + .post-note,
		ul + .post-note,
		pre[class*="language"] + .post-note {
            margin-top: var(--flow-space);
        }

        .post-note {
            background-color: #195e9b;
            border-radius: 10px;
            color: var(--color-light);
            padding: var(--flow-space);
			margin: 0;

			&:not(.post-note--update) {
				a {
					color: currentColor;

					&:hover,
					&:focus {
						color: var(--color-accent-alt);
					}
				}
			}

            strong {
                @include apply-utility('font', 'heading');
                border-bottom: 1px solid rgba(255, 255, 255, .25);
                display: block;
                font-size: get-size(600);
                margin-bottom: 10px;
                padding-bottom: 10px;
            }

			// Outputs: post-note--update
			&--update {
				background-color: var(--color-intro-bg);
				color: var(--color-text);

				h3 a {
					display: none;
				}

				strong {
					border-color: var(--color-text);
					font-size: get-size(700);
				}

				code {
					white-space: break-spaces;
				}

				pre {
					width: 100%;
				}
			}
        }

        // post__body--resume
        &--resume {
			h2,
			h3,
			h4 {
				align-items: center;
				display: flex;
				flex-wrap: wrap;

				img {
					border: 2px solid var(--color-text);
					border-radius: 50%;
					height: 40px;
					margin-left: 10px;
					margin-right: 10px;
					min-width: 40px;
					width: 40px;
				}
			}

            h2 {
                border-bottom: 1px solid var(--color-grey-med);
                margin-bottom: 40px;
                padding-bottom: 20px;
            }

            h3 {
                @include apply-utility('font', 'base');
                font-size: get-size(600);
                font-weight: 600;

                .heading-permalink {
                    display: none;
                }
            }

            h4 {
                font-weight: 400;
                margin-top: 5px;
            }

            h5 {
                margin-top: 5px;
            }
        }
    }

    &__footer {
        background-color: var(--color-action-text);
        line-height: 1.4;

        h2 {
			font-weight: 600;
			min-width: 100px;
			margin-right: get-size('base');

			a {
				@extend %visually-hidden;
			}
        }

        ul {
            justify-content: flex-start;
        }

        a {
            align-items: flex-start;
            background: var(--color-intro-bg);
            border: 1px dashed var(--color-link-text);
            box-sizing: border-box;
            display: flex;
			justify-content: center;
			padding: .5rem .8rem .8rem;
            transition: background-color .5s ease;

            &:hover,
            &:focus {
                background-color: var(--color-theme-primary);
                color: var(--color-light);
                text-decoration: none;
            }
        }
    }
}

